syntax = "proto3";

package comments;

service Comments {
	rpc New(NewRequest) returns (NewResponse) {}
	rpc List(ListRequest) returns (ListResponse) {}
}

message Comment {
	string id = 1;
	string post = 2;
	string author = 3;
	string message = 4;
	int64 created = 5;
}

message NewRequest {
	// post id
	string post = 1;
	// message to leave
	string author = 2;
	string message = 3;
}

message NewResponse {}

message ListRequest{
	string post = 1;
}

message ListResponse{
	repeated Comment comments = 1;
}
